[package]
name = "cfg_mgr"
version = "0.1.0"
authors = ["Ricard Lado"]
edition = "2021"
description = "This crate provides an easy way to import a plain text configuration file into a machine readable structure (HashMap)."
readme = "README.md"
repository = "https://github.com/rlado/cfg_mgr"
license = "GPLv3"


[dependencies]


[profile.dev]
opt-level = 0


[profile.release]
opt-level = 3